--- a/Matchismo/en.lproj/MainStoryboard.storyboard
+++ b/Matchismo/en.lproj/MainStoryboard.storyboard
@@ -12,17 +12,18 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CFc-Zk-x9p">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CFc-Zk-x9p">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="132" id="5h7-34-baf"/>
-                                    <constraint firstAttribute="height" constant="180" id="h1t-N9-uD2"/>
+                                    <constraint firstAttribute="height" constant="291" id="Q0h-Y7-Kcr"/>
+                                    <constraint firstAttribute="width" constant="204" id="drI-Rp-llC"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="tintColor" red="0.20784313730000001" green="0.72549019609999998" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="selected" title="A♣">
+                                <state key="selected">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
@@ -37,17 +38,38 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aPG-eL-WmG">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="0c6-Sc-YtW"/>
+                                    <constraint firstAttribute="width" constant="117" id="R8L-vO-m0Y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Deal Again">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="dealButtonAction:" destination="2" eventType="touchUpInside" id="8zj-pY-Wf5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wVn-Xb-9DM" firstAttribute="centerX" secondItem="CFc-Zk-x9p" secondAttribute="centerX" type="default" id="2JU-mw-NdY"/>
+                            <constraint firstItem="aPG-eL-WmG" firstAttribute="centerX" secondItem="CFc-Zk-x9p" secondAttribute="centerX" type="default" id="17X-S7-xyc"/>
                             <constraint firstItem="wVn-Xb-9DM" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="F9y-vI-oHa"/>
-                            <constraint firstItem="CFc-Zk-x9p" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" type="default" id="RqO-mf-rPc"/>
+                            <constraint firstItem="aPG-eL-WmG" firstAttribute="top" secondItem="CFc-Zk-x9p" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="T6s-HG-RW6"/>
                             <constraint firstAttribute="trailing" secondItem="wVn-Xb-9DM" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="dyq-eL-ttd"/>
+                            <constraint firstItem="CFc-Zk-x9p" firstAttribute="top" secondItem="3" secondAttribute="top" constant="56" id="gDA-gr-w30"/>
                             <constraint firstAttribute="bottom" secondItem="wVn-Xb-9DM" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="qyN-Cy-Vho"/>
+                            <constraint firstItem="aPG-eL-WmG" firstAttribute="centerX" secondItem="wVn-Xb-9DM" secondAttribute="centerX" type="default" id="yOr-2v-bD0"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cardButton" destination="CFc-Zk-x9p" id="dhO-oJ-ZaA"/>
+                        <outlet property="dealButton" destination="aPG-eL-WmG" id="iFO-FV-VpN"/>
                         <outlet property="flipsLabel" destination="wVn-Xb-9DM" id="ZE4-2o-2bB"/>
                     </connections>
                 </viewController>
@@ -59,7 +81,10 @@
         <class className="CardGameViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CardGameViewController.h"/>
             <relationships>
+                <relationship kind="action" name="dealButtonAction:" candidateClass="UIButton"/>
                 <relationship kind="action" name="flipCard:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="cardButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="dealButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="flipsLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
